--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-mongo-db": "^2.0.3",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
