--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "demo-file-upload",
-  "version": "0.0.0",
+  "name": "express-project-template",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "nodemon": "nodemon ./bin/www",
+    "dev": "heroku local dev"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-mongo-db": "^2.0.3",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
