--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "co": "^4.6.0",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^2.0.0",
     "cookie-parser": "~1.4.3",
@@ -16,9 +17,11 @@
     "express": "~4.15.2",
     "express-mongo-db": "^2.0.3",
     "express-session": "^1.15.6",
+    "gridfs-stream": "^1.1.1",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
+    "multer-gridfs-storage": "^2.1.0",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
     "serve-favicon": "~2.4.2"
